test/integration/good/function-signatures/distributions/multivariate/discrete/ordered_probit/pretty.expected
  $ ../../../../../../../../../install/default/bin/stanc --auto-format ordered_probit_log.stan
Semantic error in 'ordered_probit_log.stan', line 11, column 26 to column 79:
   -------------------------------------------------
     9:    real transformed_data_real;
    10:    transformed_data_real = ordered_probit_lpmf(d_int | d_real, d_vector);
    11:    transformed_data_real = ordered_probit_lpmf(d_int_array | d_vector, d_vector);
                                   ^
    12:    transformed_data_real = ordered_probit_lpmf(d_int_array | d_vector, d_vector_array);
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'ordered_probit_lpmf':
(array[] int, vector, vector)
Available signatures:
(array[] int, real, array[] vector) => real
  The second argument must be real but got vector
(array[] int, real, vector) => real
  The second argument must be real but got vector
(int, real, vector) => real
  The first argument must be int but got array[] int
